--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+body {
+  background-color: #9266ff;
+}
+
 .App {
-  text-align: center;
+  background: #3f3160;
+  min-height: 500px;
+  width: 400px;
+  margin: 40px auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#toDoForm input {
+  background-color: rgb(27, 112, 137);
+  width: 200px;
+  height: 50px;
+  border: none;
+  outline: none;
+  padding: 0 20px;
+  margin: 20px;
+  font-size: 19px;
+  border-radius: 10px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#toDoForm input::placeholder {
+  color: rgb(255,255, 255, 0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#toDoForm button {
+  height: 50px;
+  width: 80px;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(202,156, 24);
+  cursor: pointer;
+  font-weight: bolder;
+  color: white;
+  outline: none;
+font-size: 17px;
 }
